--- a/src/main/resources/application.fxml
+++ b/src/main/resources/application.fxml
@@ -15,17 +15,17 @@
     <TextField alignment="TOP_CENTER" layoutX="58.0" layoutY="14.0" prefHeight="25.0" prefWidth="412.0" promptText="Enter Serial Number or Name" />
     <Label layoutX="20.0" layoutY="18.0" text="Search:" />
     <ScrollPane layoutX="14.0" layoutY="79.0" prefHeight="644.0" prefWidth="1252.0">
-        <TableView prefHeight="630.0" prefWidth="1240.0">
+        <TableView fx:id="tableView" prefHeight="643.0" prefWidth="1253.0">
             <columns>
-                <TableColumn prefWidth="343.0" text="Name" />
-                <TableColumn minWidth="0.0" prefWidth="641.0" text="Serial Number" />
-                <TableColumn minWidth="0.0" prefWidth="252.0" text="Value" />
+                <TableColumn fx:id="nameColumn" prefWidth="284.0" text="Name" />
+                <TableColumn fx:id="serialNumColumn" prefWidth="359.0" text="Serial Number" />
+                <TableColumn fx:id="valueColumn" prefWidth="460.0" text="Value" />
             </columns>
         </TableView>
     </ScrollPane>
     <ButtonBar layoutX="540.0" layoutY="736.0" prefHeight="40.0" prefWidth="200.0">
       <buttons>
-          <Button mnemonicParsing="false" text="New " />
+          <Button mnemonicParsing="false" onAction="#NewButtonClicked" text="New " />
           <Button mnemonicParsing="false" text="Remove" />
       </buttons>
     </ButtonBar>
