--- a/src/main/resources/AddItemPopUp.fxml
+++ b/src/main/resources/AddItemPopUp.fxml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.AddItemPopUpController">
    <HBox alignment="CENTER" layoutX="60.0" layoutY="176.0" prefHeight="64.0" prefWidth="200.0" spacing="29.0">
-      <Button mnemonicParsing="false" onAction="#OKButtonClicked" prefWidth="100.0" text="OK" />
-      <Button lineSpacing="1.0" mnemonicParsing="false" onAction="#CancelButtonClicked" prefWidth="100.0" text="Cancel" />
+      <Button mnemonicParsing="false" onAction="#okButtonClicked" prefWidth="100.0" text="OK" />
+      <Button lineSpacing="1.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefWidth="100.0" text="Cancel" />
    </HBox>
+    <GridPane alignment="CENTER" layoutX="14.0" layoutY="28.0" prefHeight="161.0" prefWidth="303.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="90.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="110.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <Label text="Name:" GridPane.halignment="CENTER"/>
+        <Label text="Serial Number:" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+           <GridPane.margin>
+               <Insets/>
+           </GridPane.margin>
+        </Label>
+        <Label text="Value:" GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+        <TextField fx:id="nameField" prefHeight="25.0" prefWidth="152.0" GridPane.columnIndex="1"/>
+        <TextField fx:id="serialNumField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <TextField fx:id="valueField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    </GridPane>
+   <Label fx:id="errorReporter" layoutX="4.0" layoutY="6.0" prefHeight="17.0" prefWidth="313.0" textFill="#c91616" />
 </AnchorPane>
